--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "author": "Eric Liu (https://github.com/metonym)",
   "svelte": "./lib/index.js",
   "main": "./lib/index.js",
+  "types": "./types/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "dev": "rollup -cw",
     "predeploy": "node build && rollup -c",
     "deploy": "npx gh-pages -d dist",
-    "prepack": "node build"
+    "prepack": "s2s --input=node_modules/@shopify/polaris-icons/dist/svg && npx sveld --glob"
   },
   "devDependencies": {
-    "@shopify/polaris-icons": "4.1.0",
-    "svelte-readme": "^3.0.0",
-    "svg-to-svelte": "^2.0.0"
+    "@shopify/polaris-icons": "4.5.0",
+    "svelte-readme": "^3.1.0",
+    "svg-to-svelte": "^2.2.0"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "svg"
   ],
   "files": [
-    "lib"
+    "lib",
+    "types"
   ]
 }
